body shift fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -113,7 +113,7 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  margin: 0;
-  padding: 0;
+  margin: 0!important;
+  padding: 0!important;
   font-family: 'Inter', sans-serif;
 }
